Fix navbar on mobile + youtube embed size

--- a/angular/src/app/modules/single/comment-feed/new-comment/new-comment.component.scss
+++ b/angular/src/app/modules/single/comment-feed/new-comment/new-comment.component.scss
@@ -31,6 +31,7 @@ textarea {
 .content {
   display: inline-block;
   vertical-align: bottom;
+  max-width: 100%;
 }
 
 button {
